# 469ProjectCombined

./: Makefile  README.md  env.example  pyproject.toml  start.md
apps/api/: main.py
apps/api/routers/: __init__.py  aneeta.py  compare.py  health.py  sharktank.py
apps/cli/: compare.py  eval.py  report.py
configs/: base.yaml  rag.yaml
configs/eval/: aneeta.yaml  sharktank.yaml
configs/models/: local.yaml  openai.yaml  together.yaml
datasets/: registry.py
datasets/aneeta/: README.md  loader.py
datasets/sharktank/: README.md  loader.py
infra/gpu_cluster/: slurm_config.sh
notebooks/: aneeta_quickstart.ipynb  colab_setup.ipynb
notebooks/.chroma/: chroma.sqlite3
scripts/: cloc_measure.py  setup_sample_data.py
src/adapters/: aneeta.py  sharktank.py
src/core/: artifacts.py  config.py  ids.py  logging.py  telemetry.py
src/dspy/: modules.py  signatures.py
src/dspy/evaluation/: __init__.py  factcheck.py  judges.py  metrics.py  schema.py
src/dspy/optimizers/: __init__.py  bootstrap.py  copro.py  custom.py  mipro.py
src/projects/aneeta/: program.py  signatures.py
src/projects/aneeta/configs/: default.yaml
src/projects/sharktank/: program.py  signatures.py
src/projects/sharktank/configs/: default.yaml
